# serializer version: 1
# name: test_setup
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title',
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.mock_title',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_setup.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'water',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Title',
      <ValveEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.mock_title',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
